app/javascript/src/Policies/styles/policies.scss
$icon-font-path: "~bootstrap-sass/assets/fonts/bootstrap/";

.PolicyConfiguration {
  /* stylelint-disable no-invalid-position-at-import-rule, scss/load-no-partial-leading-underscore, scss/load-partial-extension */
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/_variables.scss";

  // Utilities
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins/_opacity.scss";
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins/_tab-focus.scss";
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins/_text-emphasis.scss";
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins/_text-overflow.scss";
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins/_vendor-prefixes.scss";

  // Components
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins/_buttons.scss";
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins/_forms.scss";

  // Skins
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins/_background-variant.scss";
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins/_border-radius.scss";

  // Layout
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins/_clearfix.scss";
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins/_grid-framework.scss";
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/mixins/_grid.scss";

  // Reset and dependencies
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/_glyphicons.scss";

  // Core CSS
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/_type.scss";
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/_grid.scss";
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/_forms.scss";
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/_buttons.scss";

  // Components
  @import "~bootstrap-sass/assets/stylesheets/bootstrap/_button-groups.scss";
  /* stylelint-enable no-invalid-position-at-import-rule, scss/load-no-partial-leading-underscore, scss/load-partial-extension */
}

$body-background: #fff;
$color: #464646;
$disabledColor: #8b8d8f;
$goColor: #4a90e2;
$doColor: #54b45d;
$dontColor: #ca4a4b;
$subtleColor: #ddd;
$error-color: #c00;

fieldset.policies-fieldset {
  padding-bottom: 2rem;
}

.PoliciesWidget {
  section {
    header {
      display: flex;
      flex-flow: row nowrap;
      align-items: baseline;
      justify-content: flex-start;
      margin-bottom: 1rem;
    }

    h2 {
      margin-top: 0;
      font-size: 1rem;
      font-weight: bold; // Overrides Bootstrap's h2
    }
  }

  .PolicyConfiguration {
    max-width: 880px; // --pf-c-form--m-limit-width--MaxWidth)

    &-name {
      margin: 0;
      padding: 0.5rem 0 0;
      font-size: 1rem;
      line-height: 1.5;
      font-weight: normal;
    }

    &-cancel {
      @extend .u-do;

      margin-left: auto;
    }

    &-version-and-summary {
      width: 100%;
    }

    &-description {
      margin: 1rem 0 2rem;
      white-space: pre-line;
    }

    .btn-info {
      background-color: $doColor;
      border-color: $doColor;
      float: right;

      &.btn-add.col-xs-12 {
        max-width: 1rem;
      }

      i.glyphicon {
        top: -1px;
      }
    }

    .btn-group > button.btn-danger:first-child {
      flex: 0.23 1 0% !important;
    }

    .array-item {
      clear: both;
      float: left;
      border-bottom: 1px dashed $subtleColor;
      display: block;
      width: 100%;
      margin-bottom: 2rem;
    }

    &-form {
      clear: both;

      & > .form-group {
        padding-bottom: 2rem;
        border-bottom: 1px dashed $subtleColor;
      }

      box-shadow: none !important; // HACK: we need formtastic styles, but not this.
    }

    .btn-group {
      justify-content: flex-end !important;
    }

    button[type="submit"] {
      margin-bottom: 2rem;
    }

    button.action.delete {
      margin: 0;
    }

    .error-detail {
      list-style-type: none !important;
      padding-left: 0;
    }

    legend {
      font-variant: small-caps;
      font-size: 2rem;
      font-weight: bold;
    }

    #root__title {
      display: none;
    }

    .Policy-status input#policy-enabled[type="checkbox"][name="policy-enabled"] {
      position: relative;
      top: -1px;
      margin: 0 0.375rem 0 1px;
      vertical-align: baseline;
      border-radius: 0.1875rem;
    }
  }
}

/* stylelint-disable no-descending-specificity -- FIXME */
.PoliciesWidget .Policy,
.Policy {
  display: flex;
  flex-flow: row nowrap;
  justify-content: space-between;
  align-items: baseline;
  border-bottom: 1px solid $subtleColor;
  padding: 0.5rem 0;
  user-select: none;
  text-align: left;

  &-sortHandle {
    order: 4;
    cursor: move;
    color: $subtleColor;
    padding: 1rem;
    margin: -1rem -1rem 0 0;

    &:hover {
      color: $doColor;
    }
  }

  &-article {
    order: 1;
    flex: 5;

    @extend .u-link;

    min-width: 0; // needed for the overflow ellipsis to work.

    &:hover * {
      color: $color;
    }
  }

  &-version-and-summary {
    white-space: nowrap;
    overflow: hidden;
    text-overflow: ellipsis;
    margin: 0;

    span {
      line-height: 1.5;
      color: $color;
    }
  }

  &-name {
    margin: 0;
    padding: 0;
    font-size: 1rem;
    line-height: 1.5;
    font-weight: normal;
    margin-bottom: 0;

    &--add {
      @extend .u-do;
    }
  }

  &:hover {
    .Policy-remove {
      display: block;
    }

    .Policy-sortHandle {
      display: block;
    }
  }

  &:only-child .Policy-sortHandle {
    display: none;
  }

  &-remove {
    order: 3;
    line-height: 1.5;
    border: none;
    background-color: transparent;
    font-weight: normal;
    color: $dontColor;
    opacity: 0.3;
    display: none;

    &:hover {
      opacity: 1;
    }
  }

  &-status {
    display: block;
    width: 100%;
    margin: 1rem 0;
    border-bottom: 1px solid $subtleColor;
    border-top: 1px solid $subtleColor;
  }
}

.Policy--disabled {
  .Policy-name {
    color: $disabledColor;
    text-decoration: line-through;
  }
}

.u-link {
  cursor: pointer;
  color: $goColor;

  &:hover,
  &:hover * {
    color: $color;
  }
}
/* stylelint-enable no-descending-specificity */

.u-do {
  @extend .u-link;

  color: $doColor;
}

.PolicySchema {
  $PolicySchema-color: #0088ce;

  margin-right: 2rem;

  .cm-s-default .cm-string {
    color: $PolicySchema-color;
  }
}

.PolicyIntegrationErrors {
  color: $error-color;

  ul {
    list-style-position: inside;
  }
}

